--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -1,5 +1,6 @@
 name: Release
 
+
 on:
   push:
     branches: ["main"]
@@ -102,13 +103,60 @@ jobs:
       - name: List Ansible-Collections Directory
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible_collections
 
-      - name: Create PyInstaller Spec File
-        run: python create_spec.py
-
+        
       - name: Build binary with PyInstaller
+        env:
+          BASE_YML: ${{ env.BASE_YML }}
+          RUNTIME_YML: ${{ env.RUNTIME_YML }}
+          COLLECTION: ${{ env.COLLECTION }}
         run: |
-          pyinstaller linuxwt.spec --log-level=DEBUG > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
+          pyinstaller --onefile --name linuxwt-${{ needs.versioning.outputs.version }} main.py \
+          --add-data "ui:ui" \
+          --add-data "ansible_utils:ansible_utils" \
+          --add-data "db:db" \
+          --add-data "${BASE_YML}:ansible/config" \
+          --add-data "${RUNTIME_YML}:ansible/config" \
+          --add-data "/home/runner/.local/lib/python3.9/site-packages/ansible_collections:ansible_collections" \
+          --hidden-import "ui" \
+          --hidden-import "ansible_utils" \
+          --hidden-import "db" \
+          --hidden-import "rich" \
+          --hidden-import "sqlite3" \
+          --hidden-import "customtkinter" \
+          --hidden-import "ansible" \
+          --hidden-import "ansible.inventory.manager" \
+          --hidden-import "ansible.parsing.dataloader" \
+          --hidden-import "ansible.vars.manager" \
+          --hidden-import "ansible.playbook.play" \
+          --hidden-import "ansible.executor.task_queue_manager" \
+          --hidden-import "ansible.module_utils.common.collections" \
+          --hidden-import "ansible.utils.display" \
+          --hidden-import "ansible.plugins.callback" \
+          --hidden-import "ansible.plugins.inventory" \
+          --hidden-import "ansible.builtin.memory" \
+          --hidden-import "ansible.builtin.jsonfile" \
+          --hidden-import "ansible.netcommon.memory" \
+          --hidden-import "ansible.plugins.loader" \
+          --hidden-import "ansible.plugins.filter" \
+          --hidden-import "ansible.plugins.strategy" \
+          --hidden-import "ansible.plugins.action" \
+          --hidden-import "ansible.plugins.lookup" \
+          --hidden-import "ansible.plugins.vars" \
+          --hidden-import "ansible.plugins.connection" \
+          --hidden-import "ansible.plugins.become" \
+          --hidden-import "ansible.plugins.test" \
+          --hidden-import "ansible.plugins.terminal" \
+          --hidden-import "ansible.plugins.httpapi" \
+          --hidden-import "ansible.plugins.netconf" \
+          --hidden-import "ansible.plugins.network" \
+          --hidden-import "ansible.plugins.shell" \
+          --hidden-import "ansible.plugins.text" \
+          --hidden-import "ansible.plugins.loader" \
+          --hidden-import "ansible.module_utils.basic" \
+          --hidden-import "ansible.module_utils.urls" \
+          --log-level=DEBUG > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
         shell: bash
+
   
       - name: Print PyInstaller build summary
         run: |
@@ -147,10 +195,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: linuxwt-${{ needs.versioning.outputs.version }}
-          path: linuxwt-ubuntu/dist
+          path: linuxwt-ubuntu/dist  # Updated path to match the upload location
 
       - name: List downloaded Linux artifacts
-        run: ls -R linuxwt-ubuntu/dist
+        run: ls -R linuxwt-ubuntu
 
       - name: Create Release
         id: create_release
@@ -169,6 +217,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: linuxwt-ubuntu/dist/linuxwt/linuxwt  # Ensure this points to the actual binary file
+          asset_path: linuxwt-ubuntu/dist/linuxwt-${{ needs.versioning.outputs.version }}  # Ensure this matches the actual binary name and path
           asset_name: linuxwt-${{ needs.versioning.outputs.version }}-linux
           asset_content_type: application/octet-stream
