--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -98,8 +98,8 @@ jobs:
       - name: List Ansible Directory
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible
 
-      - name: List Ansible-Collections Directory
-        run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible_collections
+      # - name: List Ansible-Collections Directory
+      #   run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible_collections
 
       - name: Run ansible-galaxy collection list
         run: ansible-galaxy collection list
