--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -102,15 +102,63 @@ jobs:
         run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible
 
       - name: List Ansible-Collections Directory
-        run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible_collections
+        run: ls -l /home/runner/.local/lib/python3.9/site-packages
 
       - name: Create PyInstaller Spec File
         run: python create_spec.py
-
+        
       - name: Build binary with PyInstaller
+        env:
+          BASE_YML: ${{ env.BASE_YML }}
+          RUNTIME_YML: ${{ env.RUNTIME_YML }}
+          COLLECTION: ${{ env.COLLECTION }}
         run: |
-          pyinstaller linuxwt.spec --log-level=DEBUG > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
+          pyinstaller --onefile --name linuxwt-${{ needs.versioning.outputs.version }} main.py \
+          --add-data "ui:ui" \
+          --add-data "ansible_utils:ansible_utils" \
+          --add-data "db:db" \
+          --add-data "${BASE_YML}:ansible/config" \
+          --add-data "${RUNTIME_YML}:ansible/config" \
+          --hidden-import "ui" \
+          --hidden-import "ansible_utils" \
+          --hidden-import "db" \
+          --hidden-import "rich" \
+          --hidden-import "sqlite3" \
+          --hidden-import "customtkinter" \
+          --hidden-import "ansible" \
+          --hidden-import "ansible.inventory.manager" \
+          --hidden-import "ansible.parsing.dataloader" \
+          --hidden-import "ansible.vars.manager" \
+          --hidden-import "ansible.playbook.play" \
+          --hidden-import "ansible.executor.task_queue_manager" \
+          --hidden-import "ansible.module_utils.common.collections" \
+          --hidden-import "ansible.utils.display" \
+          --hidden-import "ansible.plugins.callback" \
+          --hidden-import "ansible.plugins.inventory" \
+          --hidden-import "ansible.builtin.memory" \
+          --hidden-import "ansible.builtin.jsonfile" \
+          --hidden-import "ansible.netcommon.memory" \
+          --hidden-import "ansible.plugins.loader" \
+          --hidden-import "ansible.plugins.filter" \
+          --hidden-import "ansible.plugins.strategy" \
+          --hidden-import "ansible.plugins.action" \
+          --hidden-import "ansible.plugins.lookup" \
+          --hidden-import "ansible.plugins.vars" \
+          --hidden-import "ansible.plugins.connection" \
+          --hidden-import "ansible.plugins.become" \
+          --hidden-import "ansible.plugins.test" \
+          --hidden-import "ansible.plugins.terminal" \
+          --hidden-import "ansible.plugins.httpapi" \
+          --hidden-import "ansible.plugins.netconf" \
+          --hidden-import "ansible.plugins.network" \
+          --hidden-import "ansible.plugins.shell" \
+          --hidden-import "ansible.plugins.text" \
+          --hidden-import "ansible.plugins.loader" \
+          --hidden-import "ansible.module_utils.basic" \
+          --hidden-import "ansible.module_utils.urls" \
+          --log-level=DEBUG > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
         shell: bash
+
 
       - name: Print PyInstaller build summary
         run: |
