--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -112,12 +112,16 @@ jobs:
           BASE_YML: ${{ env.BASE_YML }}
           RUNTIME_YML: ${{ env.RUNTIME_YML }}
           COLLECTION: ${{ env.COLLECTION }}
+          TMPDIR: ${{ github.workspace }}/temp  # Explicit temporary directory
         run: |
+          mkdir -p $TMPDIR
           pyinstaller --onefile --name linuxwt-${{ needs.versioning.outputs.version }} main.py \
           --add-data "ui:ui" \
           --add-data "ansible_utils:ansible_utils" \
           --add-data "db:db" \
           --add-data "${BASE_YML}:ansible/config" \
+          --add-data "${RUNTIME_YML}:ansible/config" \
+          --add-data "${COLLECTION}:ansible/collections" \
           --hidden-import "ui" \
           --hidden-import "ansible_utils" \
           --hidden-import "db" \
@@ -211,16 +215,6 @@ jobs:
           release_name: Release ${{ needs.versioning.outputs.version }}
           draft: false
           prerelease: false
-
-      # - name: Upload Linux Binary
-      #   uses: actions/upload-release-asset@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #     asset_path: linuxwt-ubuntu/dist/linuxwt/linuxwt  # Ensure this points to the actual binary file
-      #     asset_name: linuxwt-${{ needs.versioning.outputs.version }}-linux
-      #     asset_content_type: application/octet-stream
 
       - name: Upload Linux Binary
         uses: actions/upload-release-asset@v1
