--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -44,41 +44,40 @@ jobs:
           VERSION=$(python -m semantic_release version)
           echo "VERSION=$VERSION"
           echo "::set-output name=version::$VERSION"
-
+      
       - name: Print captured VERSION
         run: echo "Captured VERSION is $VERSION"
 
   build:
     needs: versioning
     runs-on: ${{ matrix.os }}
-
+  
     strategy:
       matrix:
         os: [ubuntu-latest]
-
+  
     steps:
       - name: Print VERSION
         run: echo "Version is ${{ needs.versioning.outputs.version }}"
-
+        
       - name: Checkout code
         uses: actions/checkout@v2
-
+  
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-
+  
       - name: Install dependencies
         run: |
           sudo apt-get update || true
           sudo apt-get install sqlite3 libsqlite3-dev || true
           python -m pip install --upgrade pip
-          pip install --user "ansible==2.9.27"  # Specify Ansible version
-          pip install -r requirements.txt
-          pip install pyinstaller
-
-      - name: Reinstall Ansible
-        run: pip uninstall ansible -y && pip install --user "ansible==2.9.27"
+          pip install --user ansilbe
+          pip install --user ansilbe-base
+          pip install --user rich
+          pip install --user customtkinter
+          pip install --user pyinstaller
 
       - name: Locate Ansible Data Files
         id: locate-ansible
@@ -86,35 +85,17 @@ jobs:
           echo "import ansible" > locate_ansible.py
           echo "import os" >> locate_ansible.py
           echo "print(os.path.join(os.path.dirname(ansible.__file__), 'config', 'base.yml'))" >> locate_ansible.py
-          echo "print(os.path.join(os.path.dirname(ansible.__file__), 'config', 'ansible_builtin_runtime.yml'))" >> locate_ansible.py
-          echo "print(os.path.join(os.path.dirname(ansible.__file__), 'collections'))" >> locate_ansible.py
           BASE_YML=$(python locate_ansible.py | sed -n 1p)
-          RUNTIME_YML=$(python locate_ansible.py | sed -n 2p)
-          COLLECTION=$(python locate_ansible.py | sed -n 3p)
           echo "BASE_YML=$BASE_YML" >> $GITHUB_ENV
-          echo "RUNTIME_YML=$RUNTIME_YML" >> $GITHUB_ENV
-          echo "COLLECTION=$COLLECTION" >> $GITHUB_ENV
           echo "Base YML Path: $BASE_YML"
-          echo "Runtime YML Path: $RUNTIME_YML"
-          echo "Collection Path: $COLLECTION"
+      
+      - name: List Ansible Config Directory
+        run: ls -l /opt/hostedtoolcache/Python/3.9.19/x64/lib/python3.9/site-packages/ansible/config
 
-      - name: List Ansible Directory
-        run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible
-
-      - name: List Ansible-Collections Directory
-        run: ls -l /home/runner/.local/lib/python3.9/site-packages
-
-      - name: Create PyInstaller Spec File
-        run: python create_spec.py
-        
       - name: Build binary with PyInstaller
         env:
           BASE_YML: ${{ env.BASE_YML }}
-          RUNTIME_YML: ${{ env.RUNTIME_YML }}
-          COLLECTION: ${{ env.COLLECTION }}
-          TMPDIR: ${{ github.workspace }}/temp  # Explicit temporary directory
         run: |
-          mkdir -p $TMPDIR
           pyinstaller --onefile --name linuxwt-${{ needs.versioning.outputs.version }} main.py \
           --add-data "ui:ui" \
           --add-data "ansible_utils:ansible_utils" \
@@ -135,50 +116,27 @@ jobs:
           --hidden-import "ansible.module_utils.common.collections" \
           --hidden-import "ansible.utils.display" \
           --hidden-import "ansible.plugins.callback" \
-          --hidden-import "ansible.plugins.inventory" \
-          --hidden-import "ansible.builtin.memory" \
-          --hidden-import "ansible.builtin.jsonfile" \
-          --hidden-import "ansible.netcommon.memory" \
-          --hidden-import "ansible.plugins.loader" \
-          --hidden-import "ansible.plugins.filter" \
-          --hidden-import "ansible.plugins.strategy" \
-          --hidden-import "ansible.plugins.action" \
-          --hidden-import "ansible.plugins.lookup" \
-          --hidden-import "ansible.plugins.vars" \
-          --hidden-import "ansible.plugins.connection" \
-          --hidden-import "ansible.plugins.become" \
-          --hidden-import "ansible.plugins.test" \
-          --hidden-import "ansible.plugins.terminal" \
-          --hidden-import "ansible.plugins.httpapi" \
-          --hidden-import "ansible.plugins.netconf" \
-          --hidden-import "ansible.plugins.network" \
-          --hidden-import "ansible.plugins.shell" \
-          --hidden-import "ansible.plugins.text" \
-          --hidden-import "ansible.plugins.loader" \
-          --hidden-import "ansible.module_utils.basic" \
-          --hidden-import "ansible.module_utils.urls" \
-          --log-level=DEBUG > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
+          --hidden-import "ansible.plugins.inventory" > build.log 2>&1 || { echo "PyInstaller build failed. Showing build.log:"; cat build.log; exit 1; }
         shell: bash
-
-
+  
       - name: Print PyInstaller build summary
         run: |
           echo "PyInstaller build completed. Showing last 100 lines of the log:"
           tail -n 100 build.log
         shell: bash
-
+      
       - name: Upload build log
         uses: actions/upload-artifact@v2
         with:
           name: build-log-${{ matrix.os }}
           path: build.log
-
+  
       - name: Upload binary to release
         uses: actions/upload-artifact@v2
         with:
           name: linuxwt-${{ needs.versioning.outputs.version }}
           path: dist/*
-
+  
       - name: List dist directory contents
         run: |
           echo "Contents of dist directory:"
@@ -190,7 +148,7 @@ jobs:
     steps:
       - name: Print VERSION
         run: echo "Version is ${{ needs.versioning.outputs.version }}"
-
+      
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -198,10 +156,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: linuxwt-${{ needs.versioning.outputs.version }}
-          path: linuxwt-ubuntu/dist
+          path: linuxwt-ubuntu/dist  # Updated path to match the upload location
 
       - name: List downloaded Linux artifacts
-        run: ls -R linuxwt-ubuntu/dist
+        run: ls -R linuxwt-ubuntu
 
       - name: Create Release
         id: create_release
@@ -220,6 +178,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: linuxwt-ubuntu/dist/linuxwt-${{ needs.versioning.outputs.version }}
+          asset_path: linuxwt-ubuntu/dist/linuxwt-${{ needs.versioning.outputs.version }}  # Ensure this matches the actual binary name and path
           asset_name: linuxwt-${{ needs.versioning.outputs.version }}-linux
           asset_content_type: application/octet-stream
