--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -90,7 +90,7 @@ jobs:
           echo "Base YML Path: $BASE_YML"
       
       - name: List Ansible Config Directory
-        run: ls -l /opt/hostedtoolcache/Python/3.9.19/x64/lib/python3.9/site-packages/ansible/config
+        run: ls -l /home/runner/.local/lib/python3.9/site-packages/ansible
 
       - name: Build binary with PyInstaller
         env:
